<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.somkiat.dtaccalculator.MainActivity">

    <EditText
        android:id="@+id/input1"
        android:layout_width="356dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="เลข 1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="เลข 2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/addButton"
        android:onClick="add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="บวก"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/minusButton"
        android:onClick="minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="ลบ"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="คูณ"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="หาร"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <TextView
        android:id="@+id/result"
        android:layout_width="364dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="แสดงผลลัพธ์"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />

</android.support.constraint.ConstraintLayout>
